modules/cli/src/test/resources/bad/wfchoice/gchoice/Choice10a.scr
module bad.wfchoice.gchoice.Choice10a;


global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			rec Y
			{
				2() from A to B;
				choice at A
				{
					//continue X;
					continue Y;
				}
				or
				{
					2() from A to B;
				}
			}
		}
	}
}


